--- a/src/components/home/Hero/Hero.module.sass
+++ b/src/components/home/Hero/Hero.module.sass
@@ -1,3 +1,5 @@
+@import 'variables'
+
 .Hero
   & > h1
     background-image: linear-gradient(270deg, #4f56ff, #ff4980)
@@ -12,4 +14,4 @@
     font-size: 2rem
     margin: 0 0 3rem 0
     text-align: center
-    color: color-secondary
+    color: $color-secondary
